Update 5. Region growing.ipynb

--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -93,21 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the octree level for the tile\n",
-    "pointcloud = las_utils.read_las(in_file)\n",
-    "points = np.vstack((pointcloud.x, pointcloud.y, pointcloud.z)).T\n",
-    "octree_level = math_utils.get_octree_level(points, grid_size=0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Region growing with building points as initial seed points. \n",
     "region_growing_clustering = growing.LabelConnectedComp(label=Labels.BUILDING,\n",
-    "                                                       octree_level=octree_level,\n",
+    "                                                       grid_size=0.05,\n",
     "                                                       min_component_size=100)"
    ]
   },
