Update 1. Generate reference data.ipynb

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -186,8 +186,8 @@
     "    parsed_content = ams_bgt_scraper.parse_points_bgtplus(json_content)\n",
     "    bgt_point_objects_csv += parsed_content\n",
     "\n",
-    "# Scrape traffic sign data from NDW and parse the json.\n",
-    "json_content = ndw_scraper.scrape_ndw()\n",
+    "# Scrape traffic sign data from NDW. The municipality code of Amsterdam is GM0363.\n",
+    "json_content = ndw_scraper.scrape_ndw(town_code='GM0363')\n",
     "\n",
     "# Parse the downloaded json response.\n",
     "parsed_content = ndw_scraper.parse_traffic_signs(json_content, bbox)\n",
