Update 1. Generate reference data.ipynb

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "# Single file\n",
     "tilecode = '2386_9702'\n",
-    "bbox = las_utils.get_bbox_from_tile_code(tilecode)"
+    "bbox = las_utils.get_bbox_from_tile_code(tilecode, padding=10)"
    ]
   },
   {
