--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -76,8 +76,7 @@
    "source": [
     "# Output file for the BGT fuser.\n",
     "bgt_data_file = '../datasets/bgt/bgt_buildings_demo.csv'\n",
-    "csv_headers = ['building_id', 'polygon', 'x_min', 'y_max', 'x_max',\n",
-    "               'y_min']\n",
+    "csv_headers = ['building_id', 'polygon', 'x_min', 'y_max', 'x_max', 'y_min']\n",
     "\n",
     "bgt_layer = 'BGT_PND_pand'"
    ]
@@ -116,8 +115,7 @@
    "source": [
     "# Output file for the BGT fuser.\n",
     "bgt_data_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
-    "csv_headers = ['bgt_name', 'polygon', 'x_min', 'y_max', 'x_max',\n",
-    "               'y_min']\n",
+    "csv_headers = ['bgt_name', 'polygon', 'x_min', 'y_max', 'x_max', 'y_min']\n",
     "    \n",
     "# Road and parking spots layers in BGT\n",
     "bgt_layers = ['BGT_WGL_rijbaan_lokale_weg', 'BGT_WGL_parkeervlak',\n",
