Generate reference files in separate notebook and some bug fixes (#34)
* Create 1. Generate reference data.ipynb
* Update bgt_roads_demo.csv and bgt_cloud_slice.png
* get_octree_level fix in LabelConnectedComp 
* Feedback Daan

Co-authored-by: daanbl <daan.bloembergen@gmail.com>

--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -15,7 +15,6 @@
     "import time\n",
     "\n",
     "import src.utils.las_utils as las_utils\n",
-    "import src.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.fusion as fusion\n",
@@ -28,7 +27,8 @@
    "id": "bdbe7291",
    "metadata": {},
    "source": [
-    "## Car fuser based on cluster dimensions and BGT information\n"
+    "## Car fuser based on cluster dimensions and BGT information\n",
+    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb)."
    ]
   },
   {
@@ -58,44 +58,7 @@
     "# Data folder for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
     "pc_data_folder = '../datasets/pointcloud/'\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads_' + tilecode + '.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5519acf0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Specify the bounding box of the area we want to scrape.\n",
-    "bbox = las_utils.get_bbox_from_tile_code(tilecode)\n",
-    "\n",
-    "# Road parking spots layers in BGT\n",
-    "bgt_layers = [\"BGT_WGL_rijbaan_lokale_weg\", \"BGT_WGL_parkeervlak\",\n",
-    "             \"BGT_WGL_rijbaan_autoweg\", \"BGT_WGL_rijbaan_autosnelweg\",\n",
-    "             \"BGT_WGL_rijbaan_regionale_weg\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c1eb025",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Scrape data from the Amsterdam WFS and parse the json.\n",
-    "bgt_road_polygons_csv = []\n",
-    "for layer in bgt_layers:\n",
-    "    # Scrape data from the Amsterdam WFS, this will return a json response.\n",
-    "    json_content = ams_bgt_scraper.scrape_amsterdam_bgt(layer, bbox=bbox)\n",
-    "    \n",
-    "    # Parse the downloaded json response.\n",
-    "    parsed_content, csv_headers = ams_bgt_scraper.parse_polygons(json_content, prepare_csv=True)\n",
-    "    bgt_road_polygons_csv += parsed_content\n",
-    "\n",
-    "# Write the csv\n",
-    "csv_utils.write_csv(bgt_data_file, bgt_road_polygons_csv, csv_headers)"
+    "bgt_data_file = '../datasets/bgt/bgt_roads_demo.csv'"
    ]
   },
   {
@@ -107,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "# Read NPZ file\n",
+    "# We need elevation data to determine object height above ground.\n",
     "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
