--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Region growing with building points as initial seed points. \n",
-    "region_growing_pcl = growing.RegionGrowing(label=Labels.BUILDING)"
+    "region_growing_pcl = RegionGrowing(label=Labels.BUILDING, exclude_labels=exclude_labels)"
    ]
   },
   {
