Labels.py andere locatie

--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -30,7 +30,7 @@
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
-    "from src.utils.labels import Labels"
+    "from src.labels import Labels"
    ]
   },
   {
