--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -18,7 +18,7 @@
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.fusion as fusion\n",
-    "from src.utils.labels import Labels\n",
+    "from src.labels import Labels\n",
     "from src.pipeline import Pipeline"
    ]
   },
