--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -29,7 +29,7 @@
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "from src.pipeline import Pipeline\n",
-    "from src.utils.labels import Labels"
+    "from src.labels import Labels"
    ]
   },
   {
@@ -51,6 +51,9 @@
     "# Select the point cloud file to process.\n",
     "tilecode = '2386_9702'\n",
     "\n",
+    "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
+    "\n",
     "# The corresponding BGT data file.\n",
     "bgt_data_file = '../datasets/bgt/custom_points_demo.csv'\n",
     "\n",
@@ -67,8 +70,7 @@
    "outputs": [],
    "source": [
     "# Load a (partially labelled) LAS file, e.g. from the previous step.\n",
-    "las_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
-    "las = las_utils.read_las(las_file)\n",
+    "las = las_utils.read_las(in_file)\n",
     "\n",
     "labels = las.label\n",
     "points = np.vstack((las.x, las.y, las.z)).T"
@@ -112,9 +114,9 @@
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=tree_params)\n",
-    "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
-    "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
+    "tree_fuser = fusion.BGTPoleFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=tree_params)\n",
+    "light_fuser = fusion.BGTPoleFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPoleFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_data_file, ahn_reader=ahn_reader, params=sign_params)"
    ]
   },
   {
@@ -248,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
