--- a/notebooks/5. Region growing.ipynb
+++ b/notebooks/5. Region growing.ipynb
@@ -23,7 +23,7 @@
     "import src.region_growing as growing\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "from src.region_growing.region_growing import RegionGrowing\n",
-    "from src.utils.labels import Labels\n",
+    "from src.labels import Labels\n",
     "from src.pipeline import Pipeline"
    ]
   },
