--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -18,7 +18,7 @@
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.fusion as fusion\n",
-    "from src.utils.labels import Labels\n",
+    "from src.labels import Labels\n",
     "from src.pipeline import Pipeline"
    ]
   },
@@ -27,7 +27,7 @@
    "id": "bdbe7291",
    "metadata": {},
    "source": [
-    "## Street furniture fuser based on cluster dimensions and BGT information\n",
+    "## Street furniture fuser based on cluster dimensions and BGT reference data\n",
     "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb)."
    ]
   },
@@ -57,9 +57,11 @@
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Data folder for the fusers.\n",
+    "bgt_data_file = '../datasets/bgt/bgt_street_furniture_points_demo.csv'\n",
+    "\n",
+    "# We need elevation data to determine object height above ground.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
-    "pc_data_folder = '../datasets/pointcloud/'\n",
-    "bgt_data_file = '../datasets/bgt/bgt_street_furniture_points_demo.csv'"
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
    ]
   },
   {
@@ -71,16 +73,11 @@
    },
    "outputs": [],
    "source": [
-    "# We need elevation data to determine object height above ground.\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
+    "# Object type-specific parameters.\n",
+    "city_bench_params = {min_height=0.5, max_height=1.5, min_width=0.2, max_width=2.0, min_length=0.2, max_length=3.5}\n",
+    "trash_can_params = {min_height=0.5, max_height=1.5, min_width=0.2, max_width=2.0, min_length=0.2, max_length=3.5}\n",
     "\n",
-    "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "# To find appropriate dimension ranges, see e.g. https://nl.automobiledimension.com/.\n",
-    "street_furniture_fuser = fusion.StreetFurnitureFuser(Labels.STREET_FURNITURE, ahn_reader, bgt_file=bgt_data_file,\n",
-    "                            grid_size=0.05, min_component_size=1500,\n",
-    "                            min_height=0.5, max_height=1.5,\n",
-    "                            min_width=0.2, max_width=2.0,\n",
-    "                            min_length=0.2, max_length=3.5)"
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, ahn_reader, bgt_file=bgt_data_file, params=tree_params)\n"
    ]
   },
   {
