--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -77,7 +77,8 @@
     "city_bench_params = {min_height=0.5, max_height=1.5, min_width=0.2, max_width=2.0, min_length=0.2, max_length=3.5}\n",
     "trash_can_params = {min_height=0.5, max_height=1.5, min_width=0.2, max_width=2.0, min_length=0.2, max_length=3.5}\n",
     "\n",
-    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, ahn_reader, bgt_file=bgt_data_file, params=tree_params)\n"
+    "# Create fusers for BGT point data.\n",
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, ahn_reader, bgt_type='bank', bgt_file=bgt_data_file, params=tree_params)\n"
    ]
   },
   {
