--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -56,9 +56,12 @@
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "\n",
     "# Data folder for the fusers.\n",
-    "ahn_data_folder = '../datasets/ahn/'\n",
     "pc_data_folder = '../datasets/pointcloud/'\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads_demo.csv'"
+    "bgt_data_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
+    "\n",
+    "# We need elevation data to determine object height above ground.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
+    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)"
    ]
   },
   {
@@ -70,16 +73,12 @@
    },
    "outputs": [],
    "source": [
-    "# We need elevation data to determine object height above ground.\n",
-    "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
-    "\n",
-    "# Car fuser using a clustering algorithm and BGT road data.\n",
     "# To find appropriate dimension ranges, see e.g. https://nl.automobiledimension.com/.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_data_file,\n",
-    "                            grid_size=0.05, min_component_size=5000,\n",
-    "                            min_height=1.2, max_height=2.4,\n",
-    "                            min_width=1.4, max_width=2.4,\n",
-    "                            min_length=3.0, max_length=6.0)"
+    "car_params = {min_height=1.2, max_height=2.4, min_width=1.4, max_width=2.4, min_length=3.0, max_length=6.0}\n",
+    "\n",
+    "# Create fuser for car-like objects on road parts.\n",
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_data_file, grid_size=0.05,\n",
+    "                            min_component_size=5000, car_params)"
    ]
   },
   {
