--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -143,7 +143,7 @@
    "outputs": [],
    "source": [
     "# Dimension ranges of passenger cars.\n",
-    "car_params = {min_height=1.2, max_height=2.4, min_width=1.4, max_width=2.4, min_length=3.0, max_length=6.0}\n",
+    "car_params = {'min_height': 1.2, 'max_height': 2.4, 'min_width': 1.4, 'max_width': 2.4, 'min_length': 3.0, 'max_length': 6.0}\n",
     "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
     "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_data_file, grid_size=0.05,\n",
