--- a/notebooks/3. Cars.ipynb
+++ b/notebooks/3. Cars.ipynb
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "# To find appropriate dimension ranges, see e.g. https://nl.automobiledimension.com/.\n",
-    "car_params = {min_height=1.2, max_height=2.4, min_width=1.4, max_width=2.4, min_length=3.0, max_length=6.0}\n",
+    "car_params = {'min_height': 1.2, 'max_height': 2.4, 'min_width': 1.4, 'max_width': 2.4, 'min_length': 3.0, 'max_length': 6.0}\n",
     "\n",
     "# Create fuser for car-like objects on road parts.\n",
     "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_data_file, grid_size=0.05,\n",
