--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -74,11 +74,11 @@
    "outputs": [],
    "source": [
     "# Object type-specific parameters.\n",
-    "city_bench_params = {min_height=0.5, max_height=1.5, min_width=0.2, max_width=2.0, min_length=0.2, max_length=3.5}\n",
-    "trash_can_params = {min_height=0.5, max_height=1.5, min_width=0.2, max_width=2.0, min_length=0.2, max_length=3.5}\n",
+    "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 2.0, 'min_length': 0.2, 'max_length': 3.5}\n",
+    "trash_can_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 2.0, 'min_length': 0.2, 'max_length': 3.5}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, ahn_reader, bgt_type='bank', bgt_file=bgt_data_file, params=tree_params)\n"
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)\n"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Set-up the order in how we want to label.\n",
-    "process_sequence = (street_furniture_fuser,) # TODO worden de masks doorgegeven\n",
+    "process_sequence = (city_bench_fuser,) # TODO worden de masks doorgegeven\n",
     "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
