--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -33,7 +33,7 @@
     "import src.utils.plot_utils as plot_utils\n",
     "import src.utils.log_utils as log_utils\n",
     "from src.pipeline import Pipeline\n",
-    "from src.utils.labels import Labels"
+    "from src.labels import Labels"
    ]
   },
   {
@@ -146,8 +146,8 @@
     "car_params = {'min_height': 1.2, 'max_height': 2.4, 'min_width': 1.4, 'max_width': 2.4, 'min_length': 3.0, 'max_length': 6.0}\n",
     "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_data_file, grid_size=0.05,\n",
-    "                            min_component_size=5000, car_params)"
+    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_file=bgt_road_file, grid_size=0.05,\n",
+    "                            min_component_size=5000, params=car_params)"
    ]
   },
   {
@@ -175,9 +175,9 @@
     "sign_params = {'seed_height': 1.75, 'min_points': 200, 'max_r': 0.2, 'min_height': 1.2, 'z_max': 2., 'label_height': 3.}\n",
     "\n",
     "# Fusers for BGT point data.\n",
-    "tree_fuser = fusion.BGTPointFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=tree_params)\n",
-    "light_fuser = fusion.BGTPointFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=light_params)\n",
-    "sign_fuser = fusion.BGTPointFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=sign_params)"
+    "tree_fuser = fusion.BGTPoleFuser(Labels.TREE, bgt_type='boom', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=tree_params)\n",
+    "light_fuser = fusion.BGTPoleFuser(Labels.STREET_LIGHT, bgt_type='lichtmast', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=light_params)\n",
+    "sign_fuser = fusion.BGTPoleFuser(Labels.TRAFFIC_SIGN, bgt_type='verkeersbord', bgt_file=bgt_point_file, ahn_reader=ahn_reader, params=sign_params)"
    ]
   },
   {
