Update color scale

--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Select the file to process.\n",
-    "tilecode = '2631_9608' # TODO\n",
+    "tilecode = '2386_9702'\n",
     "\n",
     "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
@@ -74,11 +74,12 @@
    "outputs": [],
    "source": [
     "# Object type-specific parameters.\n",
+    "trash_can_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 1.5, 'min_length': 0.2, 'max_length': 1.5}\n",
     "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 2.0, 'min_length': 0.2, 'max_length': 3.5}\n",
-    "trash_can_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 2.0, 'min_length': 0.2, 'max_length': 3.5}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)\n"
+    "trash_can_fuser = fusion.BGTStreetFurnitureFuser(Labels.TRASH_CAN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)\n",
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)"
    ]
   },
   {
