--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -78,8 +78,10 @@
     "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 2.0, 'min_length': 0.2, 'max_length': 3.5}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "trash_can_fuser = fusion.BGTStreetFurnitureFuser(Labels.TRASH_CAN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)\n",
-    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)"
+    "trash_can_fuser = fusion.BGTStreetFurnitureFuser(Labels.TRASH_CAN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_data_file,\n",
+    "                                                 max_dist=1., params=trash_can_params)\n",
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file,\n",
+    "                                                  max_dist=1.2, params=city_bench_params)"
    ]
   },
   {
