--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "# Set-up the order in how we want to label.\n",
-    "process_sequence = (city_bench_fuser,) # TODO worden de masks doorgegeven\n",
+    "process_sequence = (trash_can_fuser, city_bench_fuser)\n",
     "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
