Aantal feedback punten verwerkt

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -202,11 +202,11 @@
    "outputs": [],
    "source": [
     "# Object type-specific parameters.\n",
-    "trash_can_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 1.5, 'min_length': 0.2, 'max_length': 1.5}\n",
-    "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 2.0, 'min_length': 0.2, 'max_length': 3.5}\n",
+    "rubbish_bin_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 1.5, 'min_length': 0.3, 'max_length': 1.5}\n",
+    "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 2.0, 'min_length': 1.0, 'max_length': 3.5}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "trash_can_fuser = fusion.BGTStreetFurnitureFuser(Labels.TRASH_CAN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_street_furniture_file, params=trash_can_params)\n",
+    "rubbish_bin_fuser = fusion.BGTStreetFurnitureFuser(Labels.RUBBISH_BIN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_street_furniture_file, params=rubbish_bin_params)\n",
     "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_street_furniture_file, params=city_bench_params)"
    ]
   },
@@ -295,7 +295,7 @@
    "source": [
     "# Set-up pipeline.\n",
     "process_sequence = (npz_ground_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
-    "                    tree_fuser, light_fuser, sign_fuser, trash_can_fuser, city_bench_fuser, \n",
+    "                    tree_fuser, light_fuser, sign_fuser, rubbish_bin_fuser, city_bench_fuser, \n",
     "                    building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, ahn_reader=ahn_reader, caching=True)"
    ]
