--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -74,14 +74,12 @@
    "outputs": [],
    "source": [
     "# Object type-specific parameters.\n",
-    "trash_can_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 1.5, 'min_length': 0.2, 'max_length': 1.5}\n",
-    "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.2, 'max_width': 2.0, 'min_length': 0.2, 'max_length': 3.5}\n",
+    "rubbish_bin_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 1.5, 'min_length': 0.3, 'max_length': 1.5}\n",
+    "city_bench_params = {'min_height': 0.5, 'max_height': 1.5, 'min_width': 0.3, 'max_width': 2.0, 'min_length': 1.0, 'max_length': 3.5}\n",
     "\n",
     "# Create fusers for BGT point data.\n",
-    "trash_can_fuser = fusion.BGTStreetFurnitureFuser(Labels.TRASH_CAN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_data_file,\n",
-    "                                                 max_dist=1., params=trash_can_params)\n",
-    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file,\n",
-    "                                                  max_dist=1.2, params=city_bench_params)"
+    "rubbish_bin_fuser = fusion.BGTStreetFurnitureFuser(Labels.RUBBISH_BIN, bgt_type='afvalbak', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=rubbish_bin_params)\n",
+    "city_bench_fuser = fusion.BGTStreetFurnitureFuser(Labels.CITY_BENCH, bgt_type='bank', ahn_reader=ahn_reader, bgt_file=bgt_data_file, params=city_bench_params)\n"
    ]
   },
   {
@@ -101,7 +99,7 @@
    "outputs": [],
    "source": [
     "# Set-up the order in how we want to label.\n",
-    "process_sequence = (trash_can_fuser, city_bench_fuser)\n",
+    "process_sequence = (rubbish_bin_fuser, city_bench_fuser)\n",
     "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
