--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -200,7 +200,8 @@
    "id": "charming-danger",
    "metadata": {},
    "source": [
-    "## Scrape street furniture object locations from BGT"
+    "## Scrape street furniture object locations from BGT\n",
+    "Please note, objects for the bgt layers \"BGTPLUS_BAK_afvalbak\" and \"BGTPLUS_SMR_bank\" are note available for the provided example point cloud tiles. Therefore, Manually generated data (<x,y> coordinates) are provided in this repository."
    ]
   },
   {
@@ -215,8 +216,7 @@
     "csv_headers = ['Type', 'X', 'Y']\n",
     "\n",
     "# BGT layers\n",
-    "bgt_layers = ['BGTPLUS_BAK_afval_apart_plaats', 'BGTPLUS_BAK_afvalbak',\n",
-    "              'BGTPLUS_SMR_bank', 'BGTPLUS_SMR_abri']"
+    "bgt_layers = ['BGTPLUS_BAK_afvalbak', 'BGTPLUS_SMR_bank'] # 'BGTPLUS_BAK_afval_apart_plaats', 'BGTPLUS_SMR_abri'"
    ]
   },
   {
@@ -237,7 +237,7 @@
     "    bgt_point_objects_csv += parsed_content\n",
     "\n",
     "# Write the csv\n",
-    "csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
+    "#csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
    ]
   }
  ],
