--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -218,7 +218,7 @@
     "---\n",
     "## Region Growing\n",
     "\n",
-    "We use region growing based on labelling of connected components. For details and other options see notebook [5. Region growing](5.%20Region%20growing.ipynb).\n",
+    "We use region growing based on labelling of connected components. For details and other options see notebook [Region growing](Region%20growing.ipynb).\n",
     "\n",
     "### Buildings\n",
     "\n",
