Update 5. Street furniture.ipynb

--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -39,8 +39,7 @@
    "outputs": [],
    "source": [
     "# The already labelled points must be removed.\n",
-    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN, Labels.CAR, Labels.NOISE)\n",
-    "# TODO"
+    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN, Labels.CAR, Labels.NOISE)\n"
    ]
   },
   {
