Update 1. Generate reference data.ipynb

--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "source": [
     "## Scrape street furniture object locations from BGT\n",
-    "Please note, objects for the bgt layers \"BGTPLUS_BAK_afvalbak\" and \"BGTPLUS_SMR_bank\" are note available for the provided example point cloud tiles. Therefore, Manually generated data (<x,y> coordinates) are provided in this repository."
+    "Please note, <x,y> coordinates for the bgt layers \"BGTPLUS_BAK_afvalbak\" and \"BGTPLUS_SMR_bank\" are note available for the provided example point cloud tiles. Therefore, Manually generated data are provided in this repository."
    ]
   },
   {
