Propper logging in all notebooks; added region growing to notebook 2.

--- a/notebooks/4. Pole-like objects.ipynb
+++ b/notebooks/4. Pole-like objects.ipynb
@@ -22,14 +22,20 @@
     "# Import modules.\n",
     "import numpy as np\n",
     "import time\n",
+    "import logging\n",
     "\n",
     "import src.fusion as fusion\n",
     "import src.region_growing as growing\n",
     "import src.utils.las_utils as las_utils\n",
+    "import src.utils.log_utils as log_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "from src.pipeline import Pipeline\n",
-    "from src.labels import Labels"
+    "from src.labels import Labels\n",
+    "\n",
+    "# INFO messages will be printed to console.\n",
+    "log_utils.reset_logger()\n",
+    "log_utils.add_console_logger(level=logging.DEBUG)"
    ]
   },
   {
@@ -195,7 +201,7 @@
    "outputs": [],
    "source": [
     "# Process the point cloud.\n",
-    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR, Labels.TREE, Labels.STREET_LIGHT, Labels.TRAFFIC_SIGN)\n",
+    "exclude_labels = (Labels.GROUND, Labels.BUILDING, Labels.CAR)\n",
     "process_sequence = (light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(process_sequence, exclude_labels, caching=False)\n",
     "\n",
@@ -249,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
