--- a/notebooks/5. Street furniture.ipynb
+++ b/notebooks/5. Street furniture.ipynb
@@ -13,13 +13,19 @@
     "# Import modules.\n",
     "import numpy as np\n",
     "import time\n",
+    "import logging\n",
     "\n",
     "import src.utils.las_utils as las_utils\n",
+    "import src.utils.log_utils as log_utils\n",
     "import src.utils.csv_utils as csv_utils\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.fusion as fusion\n",
     "from src.labels import Labels\n",
-    "from src.pipeline import Pipeline"
+    "from src.pipeline import Pipeline\n",
+    "\n",
+    "# INFO messages will be printed to console.\n",
+    "log_utils.reset_logger()\n",
+    "log_utils.add_console_logger(level=logging.DEBUG)"
    ]
   },
   {
@@ -118,10 +124,7 @@
    "outputs": [],
    "source": [
     "# Process the file.\n",
-    "start = time.time()\n",
-    "pipeline.process_file(in_file, out_file=out_file)\n",
-    "end = time.time()\n",
-    "print(f'Tile labelled in {end-start:.2f} seconds.')"
+    "pipeline.process_file(in_file, out_file=out_file)"
    ]
   },
   {
@@ -135,7 +138,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
