--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "source": [
     "## Scrape street furniture object locations from BGT\n",
-    "Please note, <x,y> coordinates for the bgt layers \"BGTPLUS_BAK_afvalbak\" and \"BGTPLUS_SMR_bank\" are note available for the provided example point cloud tiles. Therefore, Manually generated data is provided in this repository."
+    "Please note, <x,y> coordinates for the bgt layers \"BGTPLUS_BAK_afvalbak\" and \"BGTPLUS_SMR_bank\" are not available for the example point cloud tiles. Therefore, manually generated data is provided in this repository for demonstration purposes."
    ]
   },
   {
@@ -216,7 +216,7 @@
     "csv_headers = ['Type', 'X', 'Y']\n",
     "\n",
     "# BGT layers\n",
-    "bgt_layers = ['BGTPLUS_BAK_afvalbak', 'BGTPLUS_SMR_bank'] # 'BGTPLUS_BAK_afval_apart_plaats', 'BGTPLUS_SMR_abri'"
+    "bgt_layers = ['BGTPLUS_BAK_afvalbak', 'BGTPLUS_SMR_bank', 'BGTPLUS_BAK_afval_apart_plaats']"
    ]
   },
   {
@@ -236,7 +236,7 @@
     "    parsed_content = ams_bgt_scraper.parse_points_bgtplus(json_content)\n",
     "    bgt_point_objects_csv += parsed_content\n",
     "\n",
-    "# Write the csv\n",
+    "# Write the csv (uncomment when data is available)\n",
     "#csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
    ]
   }
